--- a/src/css/index.css
+++ b/src/css/index.css
@@ -1,28 +1,27 @@
-/* General */
+/* GENERAL */
+
 body, html {
 	font-size: 16px;
 }
 
-/*UTILIDAD*/
-.u-container{
+/* UTILITIES */
+
+.u-container {
 	max-width: 1245px;
 	margin: 0 auto;
 }
-
 
 /* HEADER */
 
 .header {
 	height: 90px;
 }
-
-.header-logo{
+.header-logo {
 	height: 100%;
 	width: 20%;
 	display: inline-block;
 	position: relative;
 }
-
 .header-logo img {
 	width: 100%;
 	position: absolute;
@@ -32,68 +31,62 @@ body, html {
 	right: 0;
 	margin: auto;
 }
-
-.header-main{
-	width: 80%;
+.header-main {
 	display: inline-block;
+	width: 80%;
 	float: right;
+	height: 100%;
+	box-sizing: border-box;
+	padding: 0 70px;
 	height: 45px;
 	line-height: 45px;
-	padding: 0 70px 0 70px;
-	box-sizing: border-box;
 }
-
-.header-main .links{
- 	height: 45px;
- 	line-height: 45px;
- 	font-size: 0.88em;
+.header-main .links {
+	height: 45px;
+	line-height: 45px;
+	font-size: 0.88em;
 }
-
 .header-main .links a {
 	color: #333333;
 }
-.header-main .links a:nth-child(2) {
+.header-main .links a:nth-child(2){
 	float: right;
 }
-
 .header-main .main-list {
-	margin:0;
 	padding: 0;
+	margin: 0;
 	display: flex;
 	justify-content: space-between;
-	list-style: none;
-	font-size: 1.12em;
 }
-
 .header-main .main-list-item {
+	height: 50%;
 	display: inline-block;
 }
-
-.header-main .main-list-item a{
+.header-main .main-list-item a {
 	color: #333333;
 	text-decoration: none;
+	padding: 10px;
+	font-weight: 600;
+	font-size: 1.12em;
 }
-
 .header-main .main-list-item a:hover {
-	color: #F80000;
+	color: #f80000;
 }
 
-/* 	BANNER */
+/* BANNER */
 
 .banner {
-	background-image: url(../images/hero-finance.jpg);
+	background-image: url("../images/hero-finance.jpg");
 	background-repeat: no-repeat;
 	background-position: right center;
 	min-height: 500px;
 	position: relative;
 }
-
 .banner-bg {
-	background-image: url(../images/over-hero-banner.png);
+	background-image: url("../images/over-hero-banner.png");
 	background-repeat: no-repeat;
 	height: 500px;
 }
-
 .banner-text {
 	position: absolute;
 	top: 0;
@@ -102,273 +95,270 @@ body, html {
 	display: flex;
 	flex-direction: column;
 	justify-content: center;
-	color: #FFFFFF;
+	color: white;
 	margin-left: 60px;
 }
-
-.banner-text-tittle {
+.banner-text-title {
 	font-size: 2.12em;
 	margin: 0;
 }
-
-.banner-text-text{
+.banner-text-text {
 	font-size: 1.12em;
-
 }
-
 .banner-text-contentButtons {
-	display: flex;;
+	display: flex;
 }
-
-.banner-text-contentButtons .button{
+.banner-text-contentButtons .button {
 	margin-right: 8px;
-	padding: 18px 61px;
+	padding: 18px 30px;
 	color: #006699;
 	font-size: 1.06em;
+	min-width: 250px;
 }
-
+.banner-text-contentButtons .button span {
+	font-size: 1.3em;
+	margin-left: 25px;
+	position: relative;
+	top: 3px;
+}
 .banner-text-contentLinks {
-	display: flex;;
+	display: flex;
 }
-
+.banner-text-contentLinks .iconOne {
+	position: relative;
+	font-size: 1.3em;
+	top:45px;
+	right: 70px;
+}
+.banner-text-contentLinks .iconTwo {
+	position: relative;
+	font-size: 1.3em;
+	top:45px;
+	right: 150px;
+}
 .banner-text-contentLinks .link {
 	margin-right: 8px;
 	padding: 18px 4px;
-	color: #FFFFFF;
+	color: white;
 	font-size: 1.25em;
 }
 
+/* ERP CLOUD */
 
-/* 	ERP Cloud */
-
-.erpCloud{
+.erpCloud {
 	display: flex;
 	justify-content: center;
 }
-
-.erpCloud-text{
+.erpCloud-text {
 	display: flex;
 	flex-direction: column;
 	justify-content: center;
 }
-
-.erpCloud-text-tittle{
+.erpCloud-text-title {
 	font-size: 1.75em;
 }
 .erpCloud-text-list {
 	list-style: none;
 }
-
 .erpCloud-text-list .item {
 	margin: 0 0 20px;
 }
-
 .erpCloud-text-contentButtons {
 	display: flex;
 	justify-content: center;
 }
-
+.erpCloud-text-contentButtons span {
+	font-size: 1.3em;
+	margin-left: 25px;
+	position: relative;
+	top: 3px;
+}
 .erpCloud-text-contentButtons .button {
-	padding: 18px 61px;
+	padding: 18px 30px;
 	margin: 10px;
 	border: 1px solid #006699;
 	color: #006699;
 	background: transparent;
+	min-width: 250px;
 }
-
 .erpCloud-text-contentButtons .button:hover {
-	border: 1px solid #000000;
-	color: #000000;
+	border: 1px solid black;
+	color: black;
 }
 
+/* CUSTOMERS */
 
-/*CUSTOMERS*/
 .customers {
 	margin: 50px 0;
 }
-
-.customers-tittle {
+.customers-title {
 	text-align: center;
 	font-size: 1.50em;
 }
-
 .customers-contentImages {
 	display: flex;
 	justify-content: space-around;
 }
 
+/* CARDS */
 
-/*CARDS*/
-
-.contentCards {
-	display: flex;
+.content-cards {
 	margin: 50px 0;
+	display: flex;
 	justify-content: space-between;
 }
-
 .card {
 	display: flex;
-	border: 1px solid #eeeeee;
+	border: 1px solid #eee;
 	width: 48%;
-	background-color: #FFFFFF;
+	background-color: #FFF;
 }
-
 .card-img img {
 	height: 100%;
 }
-
 .card-text {
 	display: flex;
 	flex-direction: column;
 	justify-content: center;
-	padding:  0 50px;
+	padding: 0 50px;
 }
-
 .card-text-text {
 	margin: 0 0 5px;
 	font-size: 0.88em;
 }
-
 .card-text-link {
 	font-size: 0.88em;
-	text-decoration: none;
 }
 
-/*PLANNING*/
+/* PLANNING */
 
 .planning {
 	background-color: #fafafa;
 	padding: 60px 30px;
 }
 .planning-content {
+
 	display: flex;
 }
-
 .planning-content-text {
 	display: flex;
 	flex-direction: column;
 	justify-content: center;
 }
-
-.planning-content-text  .tittle{
+.planning-content-text .title {
 	font-size: 1.75em;
 }
-
-
 .planning-content-text .list {
 	list-style: none;
 }
-
-.planning-content-text .item {
+.planning-content-text .list-item {
 	margin: 0 0 25px;
 }
-
-.planning--contentButtons {
+.planning-content-text .contentButtons {
 	display: flex;
 	justify-content: center;
 }
-
-.planning-contentButtons .button {
-	padding: 18px 61px;
+.planning-content-text .contentButtons-button {
+	padding: 18px 30px;
 	margin: 10px;
 	border: 1px solid #006699;
 	color: #006699;
 	background: transparent;
+	min-width: 250px;
+}
+.planning-content-text .contentButtons-button span {
+	position: relative;
+	top: 3px;
+	font-size: 1.3em;
+	margin-left: 25px;
+}
+.planning-content-text .contentButtons-button:hover {
+	border: 1px solid black;
+	color: black;
 }
 
-.planning-contentButtons .button:hover {
-	border: 1px solid #000000;
-	color: #000000;
-}
-
-/*FOOTER*/
+/* FOOTER */
 
 .footer {
-
+	margin-bottom: 40px;
 }
 
-/*FOOTER COLS*/
+/* FOOTER COLS */
 
 .footer-contentCols {
 	display: flex;
 	justify-content: space-between;
-	background-color: #FAFAFA;
+	background-color: #fafafa;
 }
-
 .footer-contentCols-col {
 	padding: 0 30px 50px;
-
-
 }
-
-.footer-contentCols-col .tittle {
-	color: #1F4F82;
+.footer-contentCols-col .title {
+	color: #1f4f82;
 	margin-bottom: 30px;
 }
-
 .footer-contentCols-col .list {
 	list-style: none;
 	padding: 0;
-	margin:0;
+	margin: 0;
 }
-
 .footer-contentCols-col .list-item {
 	margin: 0 0 15px;
-}
 
+}
 .footer-contentCols-col .list-item-link {
 	text-decoration: none;
 	font-size: 0.88em;
-	color: #7a7a7a;
+	color: #333;
 }
 
-/*FOOTER BOTTOM*/
+/* FOOTER BOTTOM */
 
 .footer-contentBottom {
 	position: relative;
 }
-
-.footer-contentBottom-tittle {
+.footer-contentBottom-title {
 	font-size: 1.25em;
 	margin-bottom: 10px;
 	font-weight: normal;
 }
-
-.footer-contentBottom-tittle span {
-	color: #F80000;
+.footer-contentBottom-title span {
+	color: #f80000;
 }
-
 .footer-contentBottom-listLinks {
-	list-style: none;
-	margin:0;
-	padding: 0;
-	font-size: 0.69em;
-
-}
-
-.footer-contentBottom-listLinks .item {
-	display: inline-block;
-}
-
-.footer-contentBottom-listLinks .item-link {
-	text-decoration: none;
-	color: #000000;
-}
-
-.footer-contentBottom-listSocial {
 	list-style: none;
 	margin: 0;
 	padding: 0;
-	position: absolute;
-	top: 0;
-	right: 0;
+	font-size: 0.69em;
 }
-
+.footer-contentBottom-listLinks .item {
+	display: inline-block;
+}
+.footer-contentBottom-listLinks .item-link {
+	text-decoration: none;
+	color: black;
+}
+.footer-contentBottom-listSocial {
+	list-style: none;
+	padding: 0;
+	margin: 0;
+	position: absolute;
+	right: 0;
+	top: 0;
+}
 .footer-contentBottom-listSocial .item {
 	display: inline-block;
-} 
-
+}
 .footer-contentBottom-listSocial .item-link {
 	text-decoration: none;
 	padding: 10px;
+}
+.footer-contentBottom-listSocial .item-link span {
+	font-size: 1.6em;
+}
+.footer-contentBottom-listSocial .item-link span:before {
+	color: gray;
+}
+.footer-contentBottom-listSocial .item-link:hover span:before {
+	color: red;
 }
