--- a/src/sass/fonts.scss
+++ b/src/sass/fonts.scss
@@ -1,10 +1,10 @@
 @font-face {
   font-family: 'icomoon';
-  src:  url('../fonts/icomoon.eot?dmxmwn');
-  src:  url('../fonts/icomoon.eot?dmxmwn#iefix') format('embedded-opentype'),
-    url('../fonts/icomoon.ttf?dmxmwn') format('truetype'),
-    url('../fonts/icomoon.woff?dmxmwn') format('woff'),
-    url('../fonts/icomoon.svg?dmxmwn#icomoon') format('svg');
+  src:  url('../../src/fonts/icomoon.eot?dmxmwn');
+  src:  url('../../src/fonts/icomoon.eot?dmxmwn#iefix') format('embedded-opentype'),
+    url('../../src/fonts/icomoon.ttf?dmxmwn') format('truetype'),
+    url('../../src/fonts/icomoon.woff?dmxmwn') format('woff'),
+    url('../../src/fonts/icomoon.svg?dmxmwn#icomoon') format('svg');
   font-weight: normal;
   font-style: normal;
 }
